<resources>
    <string name="app_name">Mike Movie</string>
    <string name="most_popular">Most Popular</string>
    <string name="now_playing">Now Playing</string>
    <string name="top_rate">Top Rate</string>
    <string name="upcoming">Upcoming</string>
    <string name="sample_text">Lorem ipsum</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="more">More</string>
    <string name="load_genres_failed">Load genres failed.</string>
    <string name="rating">Rating:</string>
    <string name="release_date">Release date:</string>
    <string name="overview">Overview</string>
    <string name="casts">Casts</string>
    <string name="production_companies">Production Companies</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="delete_search_history">Delete search history</string>
    <string name="mode_3g">3G Mode</string>
    <string name="bug_report">Bug Report</string>
    <string name="version_history">Version 1.0.1</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="buffering">Buffering</string>
    <string name="stopped">Stopped</string>
    <string name="paused">Paused</string>
    <string name="playing">Playing</string>
    <string name="more_trailers">More trailers</string>
    <string name="no_trailers">This movie has no trailer or trailer is loading.</string>
    <string name="birth_day">Birth day:</string>
    <string name="popular">Popular:</string>
    <string name="popularity">Popularity:</string>
    <string name="biography">Biography</string>
    <string name="related_movies">Related movies</string>
    <string name="headquarters">Headquarters:</string>
    <string name="origin_country">Origin country:</string>
    <string name="dialog_no_internet">No internet connection found. \nPlease connect to the
        internet for best experience.</string>
    <string name="dialog_no_result">No result.</string>
    <string name="no_favorite_items">No favorite items.</string>
    <string name="add_favorite_success">Successfully added movie to favorite list.</string>
    <string name="add_favorite_failed">Failed to add movie to favorite list.</string>
    <string name="remove_favorite_success">Successfully removed movie to favorite list.</string>
    <string name="remove_favorite_failed">Failed to remove movie to favorite list.</string>
</resources>
