<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_8"
    tools:context=".screen.more.MoreFragment">

    <TextView
        android:id="@+id/text_setting_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_8"
        android:text="@string/setting"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:textColor="@color/color_text_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/delete_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4"
        android:orientation="horizontal"
        android:padding="@dimen/dp_8"
        android:paddingEnd="@dimen/dp_24"
        android:paddingStart="@dimen/dp_24"
        app:layout_constraintTop_toBottomOf="@id/text_setting_title">

        <ImageView
            android:id="@+id/image_ic_trash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_delete_red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:text="@string/delete_search_history"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/color_text_sub_title"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/saving_3g"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4"
        android:orientation="horizontal"
        android:padding="@dimen/dp_8"
        android:paddingEnd="@dimen/dp_24"
        android:paddingStart="@dimen/dp_24"
        app:layout_constraintTop_toBottomOf="@id/delete_history">

        <ImageView
            android:id="@+id/image_ic_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_wifi_red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_40"
            android:text="@string/mode_3g"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/color_text_sub_title"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switch_mode_3g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <TextView
        android:id="@+id/text_about_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_8"
        android:text="@string/about"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:textColor="@color/color_text_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/saving_3g" />

    <RelativeLayout
        android:id="@+id/bug_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4"
        android:orientation="horizontal"
        android:padding="@dimen/dp_8"
        android:paddingEnd="@dimen/dp_24"
        android:paddingStart="@dimen/dp_24"
        app:layout_constraintTop_toBottomOf="@id/text_about_title">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_bug_red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_40"
            android:text="@string/bug_report"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/color_text_sub_title"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/dp_8"
            app:srcCompat="@drawable/ic_navigate_next_black" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/version_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4"
        android:orientation="horizontal"
        android:padding="@dimen/dp_8"
        android:paddingEnd="@dimen/dp_24"
        android:paddingStart="@dimen/dp_24"
        app:layout_constraintTop_toBottomOf="@id/bug_report">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            app:srcCompat="@drawable/ic_history_red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_40"
            android:text="@string/version_history"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/color_text_sub_title"
            android:textStyle="bold" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
