<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image_toolbar_back_icon"
                    android:layout_width="@dimen/dp_48"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/dp_8"
                    android:layout_marginStart="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_8"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_arrow_back_white_24dp" />

                <TextView
                    android:id="@+id/text_toolbar_title"
                    style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_8"
                    android:layout_marginStart="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_8"
                    android:maxLines="1"
                    android:text="@string/app_name"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/image_toolbar_back_icon"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.Toolbar>

        <android.support.v7.widget.CardView
            android:id="@+id/card_person_profile"
            android:layout_width="@dimen/dp_120"
            android:layout_height="@dimen/dp_180"
            android:layout_marginStart="@dimen/dp_4"
            android:layout_marginTop="@dimen/dp_4"
            app:cardCornerRadius="@dimen/dp_8"
            app:cardElevation="@dimen/dp_8"
            app:cardUseCompatPadding="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <ImageView
                android:id="@+id/image_person_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/movie_detail_poster_sample" />
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/text_person_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_16"
            android:ellipsize="marquee"
            android:focusable="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:text="@string/sample_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:textColor="@color/color_text_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/card_person_profile"
            app:layout_constraintTop_toTopOf="@+id/card_person_profile" />

        <TextView
            android:id="@+id/text_person_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/birth_day"
            app:layout_constraintStart_toEndOf="@+id/card_person_profile"
            app:layout_constraintTop_toBottomOf="@+id/text_person_name" />

        <TextView
            android:id="@+id/text_person_birthday_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:text="@string/sample_text"
            app:layout_constraintStart_toEndOf="@+id/text_person_birthday"
            app:layout_constraintTop_toTopOf="@+id/text_person_birthday" />

        <TextView
            android:id="@+id/text_person_popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/popular"
            app:layout_constraintStart_toStartOf="@+id/text_person_birthday"
            app:layout_constraintTop_toBottomOf="@+id/text_person_birthday" />

        <TextView
            android:id="@+id/text_person_popular_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/sample_text"
            app:layout_constraintStart_toEndOf="@+id/text_person_popular"
            app:layout_constraintTop_toBottomOf="@+id/text_person_birthday" />

        <TextView
            android:id="@+id/text_person_biography"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_8"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/biography"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_person_profile" />

        <TextView
            android:id="@+id/text_person_related_movies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/related_movies"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:textColor="@color/color_text_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_person_biography" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_person_movies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:orientation="horizontal"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_person_related_movies" />
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>
